@@ -38,6 +38,8 @@
 <p>2018-02-10  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/bmp.c (ReadBMPImage): Avoid possible division by zero
+when decoding CIE primary values. (Credit to OSS-Fuzz)</li>
 <li>magick/export.c (ExportViewPixelArea): Only compute
 unsigned_maxvalue if sample_bits &lt;= 32.</li>
 <li>magick/import.c (ImportViewPixelArea): Assure that
